@@ -19,6 +19,7 @@ export(
        "expm",
        "facmul",
        "lu",
+       "mcmcsamp", ## lmer-related
        "norm",
        "rcond",
        "round", # "Math2" group (needs explicit setGeneric(.))
@@ -108,6 +109,7 @@ exportMethods(
 	      "expm",
               "kronecker",
 	      "image",
+              "mcmcsamp", ## lmer-related
 	      "norm",
 	      "rcond",
               "rowMeans",
